TypeChecker/test_cases/bad/inherit-undeclared.cl
class Main {
  main( ) : Object { 5 } ; 
} ;

class Bad inherits Undeclared {
  x : Int <- 5 ;
} ;
